fix vertical scrollbar

--- a/panel/template/fast/grid/fast_grid_template.css
+++ b/panel/template/fast/grid/fast_grid_template.css
@@ -187,7 +187,7 @@ html {
   scrollbar-shadow-color: var( --neutral-fill-rest);
 }
 
-::-webkit-scrollbar { width: 12px; height: 3px;}
+::-webkit-scrollbar { width: 12px; height: 12px;}
 ::-webkit-scrollbar-button {  background-color: var( --neutral-fill-rest); }
 ::-webkit-scrollbar-track {  background-color: var( --neutral-fill-rest);}
 ::-webkit-scrollbar-track-piece { background-color: var(--background-color)}
